# signal-rs

./: .gitignore
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/double-ratchet/: Cargo.toml
crates/double-ratchet/src/: lib.rs  ratchet.rs  tests.rs  util.rs
crates/signal/: Cargo.toml
crates/signal-common/: Cargo.toml
crates/signal-common/src/: convert.rs  keys.rs  lib.rs
crates/signal/src/: lib.rs
crates/x3dh/: Cargo.toml
crates/x3dh/src/: keyserver.rs  lib.rs  one.rs  participant.rs  peer.rs
