[package]
name = "signal-common"
version = "0.1.0"
authors = ["Andrew Dona-Couch <signal-rs@andrewcou.ch>"]

[dependencies]
curve25519-dalek = "1"
ed25519-dalek = "1.0.0-pre.1"
rand = "0.7.3"
rand_core = "0.5.1"
sha2 = "0.7"

[dependencies.x25519-dalek]
version = "0.6"
default-features = false
features = ["std", "u64_backend"]
